--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/jpeg" sizes="64x64" href="/Piltaland Flag.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Piltaland United States - A federation of 16 states governed by Law as Code | ピルタランド連合国家 - 16州からなる連合国家">
