feat: Update Various Mistakes From Copilot

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="icon" type="image/jpeg" sizes="64x64" href="/Piltaland Flag.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Piltaland United States - A federation of 16 states governed by Law as Code | ピルタランド連合国家 - 16州からなる連合国家">
+    <meta name="description"
+        content="Piltaland United States - A federation of 16 states governed by Law as Code | ピルタランド連合国家 - 16州からなる連合国家">
     <title>Piltaland United States | ピルタランド連合国家</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <nav class="navbar">
@@ -20,8 +23,6 @@
                     <li><a href="#home">Home ホーム</a></li>
                     <li><a href="#philosophy">Philosophy 理念</a></li>
                     <li><a href="#states">States 州</a></li>
-                    <li><a href="#railway">Railway 鉄道</a></li>
-                    <li><a href="#participate">Participate 参加</a></li>
                 </ul>
             </div>
         </nav>
@@ -35,9 +36,6 @@
                 <p class="hero-subtitle">ピルタランド連合国家</p>
                 <p class="tagline">A Federation of 16 States | Governed by Law as Code</p>
                 <p class="tagline-ja">16州からなる連合国家 | コードで定義される法治国家</p>
-                <a href="#participate" class="cta-button" aria-label="Apply for railway license">
-                    🚄 Apply for Railway License (Pull Request)
-                </a>
             </div>
         </section>
 
@@ -53,19 +51,16 @@
                         <div class="card-icon">⚖️</div>
                         <h3>GitHub-Managed Governance</h3>
                         <p class="jp">ガバナンスのGitHub管理</p>
-                        <p>All laws, regulations, and infrastructure standards are defined as code in our GitHub Organization. Every change goes through pull requests, reviews, and version control.</p>
+                        <p>All laws, regulations, and infrastructure standards are defined as code in our GitHub
+                            Organization. Every change goes through pull requests, reviews, and version control.</p>
                     </div>
                     <div class="philosophy-card">
                         <div class="card-icon">🌐</div>
                         <h3>Federation Model (UAE-Inspired)</h3>
                         <p class="jp">連邦制（UAEモデル）</p>
-                        <p>The Federal Unified Government manages wide-area infrastructure (railway licenses, standards), while each of the 16 states maintains autonomous governance through dedicated repositories.</p>
-                    </div>
-                    <div class="philosophy-card">
-                        <div class="card-icon">📜</div>
-                        <h3>Historical Legacy</h3>
-                        <p class="jp">歴史的遺産</p>
-                        <p>Originally an English-speaking region, Piltaland was once governed by an Eastern Empire (Japan). This legacy deeply embedded Japanese language in railway terminology and administrative systems, making us a bilingual nation.</p>
+                        <p>The Federal Unified Government manages wide-area infrastructure (railway licenses,
+                            standards), while each of the 16 states maintains autonomous governance through dedicated
+                            repositories.</p>
                     </div>
                 </div>
             </div>
@@ -83,190 +78,92 @@
                     <div class="state-card featured">
                         <div class="state-rank">#1</div>
                         <h3>Vakapmaa</h3>
-                        <p class="state-population">👥 Population: 5,320,000</p>
-                        <p class="state-desc">The central hub state with major cities including Tuuna and Pertvepota. Economic and cultural center of the federation.</p>
+                        <p class="state-population">👥 Population: 5,324,414</p>
+                        <p class="state-desc">The central hub state and the federation's heart. Home to the capital area
+                            and primary
+                            administrative centers.</p>
                         <span class="state-badge">Repository: /Vakapmaa</span>
                     </div>
+
                     <div class="state-card featured">
                         <div class="state-rank">#2</div>
                         <h3>Napokinmaa</h3>
-                        <p class="state-population">👥 Population: 5,170,000</p>
-                        <p class="state-desc">The economic powerhouse and private railway network hub. Dense urban development and advanced transit systems.</p>
+                        <p class="state-population">👥 Population: 5,177,725</p>
+                        <p class="state-desc">Economic powerhouse and private railway hub. High density urban
+                            development and
+                            transit-oriented cities.</p>
                         <span class="state-badge">Repository: /Napokinmaa</span>
                     </div>
+
                     <div class="state-card">
-                        <h3>State #3</h3>
-                        <p class="state-population">👥 Population: ~4,800,000</p>
-                        <p class="state-desc">Details managed in state repository.</p>
-                        <span class="state-badge">Repository: /State-03</span>
+                        <div class="state-rank">#3</div>
+                        <h3>Uradia</h3>
+                        <p class="state-population">👥 Population: 2,881,202</p>
+                        <p class="state-desc">High population density region with major infrastructure projects under
+                            deliberation.</p>
+                        <span class="state-badge">Repository: /Uradia</span>
                     </div>
+
                     <div class="state-card">
-                        <h3>State #4</h3>
-                        <p class="state-population">👥 Population: ~4,500,000</p>
-                        <p class="state-desc">Details managed in state repository.</p>
-                        <span class="state-badge">Repository: /State-04</span>
+                        <div class="state-rank">#4</div>
+                        <h3>Karbidia</h3>
+                        <p class="state-population">👥 Population: 2,420,595</p>
+                        <p class="state-desc">Strategic industrial zone and regional transit gateway. Repository under
+                            active
+                            development.</p>
+                        <span class="state-badge">Repository: /Karbidia</span>
                     </div>
+
                     <div class="state-card">
-                        <h3>State #5</h3>
-                        <p class="state-population">👥 Population: ~4,200,000</p>
-                        <p class="state-desc">Details managed in state repository.</p>
-                        <span class="state-badge">Repository: /State-05</span>
+                        <div class="state-rank">#5</div>
+                        <h3>Giendeuria</h3>
+                        <p class="state-population">👥 Population: 1,631,961</p>
+                        <p class="state-desc">Regional state focused on cultural integration and autonomous
+                            administration.</p>
+                        <span class="state-badge">Repository: /Giendeuria</span>
                     </div>
+
                     <div class="state-card">
-                        <h3>State #6</h3>
-                        <p class="state-population">👥 Population: ~3,900,000</p>
-                        <p class="state-desc">Details managed in state repository.</p>
-                        <span class="state-badge">Repository: /State-06</span>
+                        <div class="state-rank">#6</div>
+                        <h3>Stryt</h3>
+                        <p class="state-population">👥 Population: 1,608,999</p>
+                        <p class="state-desc">Emerging logistics hub connecting northern and southern territories.</p>
+                        <span class="state-badge">Repository: /Stryt</span>
                     </div>
+
                     <div class="state-card">
-                        <h3>State #7-16</h3>
-                        <p class="state-desc">Additional states with varying populations and characteristics. Each maintains autonomous governance.</p>
-                        <span class="state-badge">Repositories: /State-07 to /State-16</span>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Railway Section -->
-        <section id="railway" class="section">
-            <div class="container">
-                <h2 class="section-title">
-                    <span class="en">Railway System</span>
-                    <span class="ja">鉄道システム</span>
-                </h2>
-                <div class="railway-intro">
-                    <p class="large-text">A sophisticated mixed-gauge system combining historical narrow gauge with modern high-speed rail</p>
-                    <p class="large-text-ja">歴史的狭軌と現代高速鉄道を組み合わせた高度な軌間混在システム</p>
-                </div>
-                
-                <div class="railway-grid">
-                    <div class="railway-card">
-                        <h3>🛤️ Track Gauges | 軌間</h3>
-                        <div class="gauge-info">
-                            <div class="gauge-item">
-                                <strong>Narrow Gauge (狭軌)</strong>
-                                <span class="gauge-spec">1067mm</span>
-                                <p>Legacy system from the Eastern Empire era. Still widely used for regional and private railways.</p>
-                            </div>
-                            <div class="gauge-item">
-                                <strong>Standard Gauge (標準軌)</strong>
-                                <span class="gauge-spec">1435mm</span>
-                                <p>Modern Shinkansen (新幹線) high-speed rail system. Symbol of modernization and progress.</p>
-                            </div>
-                        </div>
+                        <div class="state-rank">#7</div>
+                        <h3>Doscompia</h3>
+                        <p class="state-population">👥 Population: 1,467,874</p>
+                        <p class="state-desc">Autonomous state with a focus on resource management and environmental
+                            laws.</p>
+                        <span class="state-badge">Repository: /Doscompia</span>
                     </div>
 
-                    <div class="railway-card">
-                        <h3>🏔️ Geographic Challenges | 地理的課題</h3>
-                        <p><strong>Alps-Veris Mountain Range (アルプス・ヴェリス山脈)</strong></p>
-                        <p>Elevation: H 50-100</p>
-                        <p>A massive north-south mountain range divides the country, requiring advanced civil engineering:</p>
-                        <ul>
-                            <li>🔄 Loop lines (ループ線)</li>
-                            <li>↔️ Switchbacks (スイッチバック)</li>
-                            <li>🚇 Tunnels (トンネル)</li>
-                        </ul>
+                    <div class="state-card">
+                        <div class="state-rank">#8</div>
+                        <h3>Dier</h3>
+                        <p class="state-population">👥 Population: 1,055,108</p>
+                        <p class="state-desc">Gateway to the western provinces with a history of diverse sovereign
+                            treaties.</p>
+                        <span class="state-badge">Repository: /Dier</span>
                     </div>
 
-                    <div class="railway-card">
-                        <h3>🏢 Operation Model | 運営モデル</h3>
-                        <p><strong>Vertical Separation (上下分離方式)</strong></p>
-                        <p>The Federal Government owns and maintains the track infrastructure, while both public and private operators run train services.</p>
-                        <p class="jp">連邦政府が線路インフラを所有・保守し、公営・私営の両事業者が列車運行を行います。</p>
-                        <div class="operator-types">
-                            <span class="badge">Federal Railways</span>
-                            <span class="badge">Private Railways</span>
-                            <span class="badge">State Railways</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="railway-standards">
-                    <h3>📋 Technical Standards</h3>
-                    <p>All railway specifications are maintained in the <code>/railway-standards</code> repository</p>
-                    <div class="standards-links">
-                        <a href="https://github.com/Piltaland-neko09cat" class="standard-link">🔧 Engineering Standards</a>
-                        <a href="https://github.com/Piltaland-neko09cat" class="standard-link">🛡️ Safety Regulations</a>
-                        <a href="https://github.com/Piltaland-neko09cat" class="standard-link">🗺️ Route Standards</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Participate Section -->
-        <section id="participate" class="section alt-bg">
-            <div class="container">
-                <h2 class="section-title">
-                    <span class="en">Join the Nation</span>
-                    <span class="ja">国家への参加</span>
-                </h2>
-                <div class="participate-content">
-                    <div class="participate-card primary-cta">
-                        <h3>🚄 Apply for Railway License</h3>
-                        <p class="jp">鉄道免許の申請</p>
-                        <p>Want to operate a railway in Piltaland? Submit a Pull Request with your proposal following our technical standards.</p>
-                        <ol>
-                            <li>Fork the <code>/railway-standards</code> repository</li>
-                            <li>Prepare your license application following the template</li>
-                            <li>Submit a Pull Request for review</li>
-                            <li>Engage with the federal review board</li>
-                        </ol>
-                        <a href="https://github.com/Piltaland-neko09cat" class="btn-primary">Submit Pull Request →</a>
+                    <div class="state-card">
+                        <h3>Ismaa, Budeche, Iye, Ushinia</h3>
+                        <p class="state-population">👥 Population: 130k - 770k</p>
+                        <p class="state-desc">Diverse member states including Ismaa (770k) and Budeche (507k). Each
+                            maintains distinct
+                            local ordinances.</p>
+                        <span class="state-badge">Various Repositories</span>
                     </div>
 
-                    <div class="participate-grid">
-                        <div class="participate-card">
-                            <h3>📜 Propose Legislation</h3>
-                            <p>Contribute to our legal framework through the <code>/laws</code> repository</p>
-                            <a href="https://github.com/Piltaland-neko09cat" class="btn-secondary">View Laws →</a>
-                        </div>
-                        <div class="participate-card">
-                            <h3>🗺️ Map Data</h3>
-                            <p>Improve our geographical and infrastructure data in <code>/map-data</code></p>
-                            <a href="https://github.com/Piltaland-neko09cat" class="btn-secondary">Contribute →</a>
-                        </div>
-                        <div class="participate-card">
-                            <h3>🏛️ State Governance</h3>
-                            <p>Each state has its own repository. Join your local state's government.</p>
-                            <a href="https://github.com/Piltaland-neko09cat" class="btn-secondary">Browse States →</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Organization Info -->
-        <section class="section org-info">
-            <div class="container">
-                <h2 class="section-title">GitHub Organization</h2>
-                <p class="org-desc">All governance, infrastructure, and legal code is managed at:</p>
-                <a href="https://github.com/Piltaland-neko09cat" class="org-link">
-                    <span class="org-icon">📦</span>
-                    github.com/Piltaland-neko09cat
-                </a>
-                <div class="repo-structure">
-                    <h3>Repository Structure</h3>
-                    <div class="repo-list">
-                        <div class="repo-item">
-                            <span class="repo-icon">📁</span>
-                            <code>/laws</code>
-                            <span class="repo-desc">Legal framework and regulations</span>
-                        </div>
-                        <div class="repo-item">
-                            <span class="repo-icon">📁</span>
-                            <code>/railway-standards</code>
-                            <span class="repo-desc">Railway technical specifications</span>
-                        </div>
-                        <div class="repo-item">
-                            <span class="repo-icon">📁</span>
-                            <code>/map-data</code>
-                            <span class="repo-desc">Geographic and infrastructure data</span>
-                        </div>
-                        <div class="repo-item">
-                            <span class="repo-icon">📁</span>
-                            <code>/Vakapmaa, /Napokinmaa, ...</code>
-                            <span class="repo-desc">Individual state repositories</span>
-                        </div>
+                    <div class="state-card">
+                        <h3>Baganon, Pieksamia, Iyaraba</h3>
+                        <p class="state-population">👥 Population: 130k - 230k</p>
+                        <p class="state-desc">States with strong local identity and specialized economic sectors in the
+                            federation.</p>
+                        <span class="state-badge">Various Repositories</span>
                     </div>
                 </div>
             </div>
@@ -305,4 +202,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
