Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
         content="Piltaland United States - A federation of 16 states governed by Law as Code | ピルタランド連合国家 - 16州からなる連合国家">
     <title>Piltaland United States | ピルタランド連合国家</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-43WFLFZLEQ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-43WFLFZLEQ');
+    </script>
 </head>
 
 <body>
