--- a/laws/index.html
+++ b/laws/index.html
@@ -34,7 +34,7 @@
             <h1>Piltaland 法令ポータル</h1>
             <p style="text-align: center;">左のメニューから法令を選択してください。</p>
             <hr>
-            <p>※ 各法令リポジトリにトピック <code>piltaland-law</code> を設定すると自動でここに反映されます。</p>
+            <p>※ 各法令リポジトリにトピック <code>piltaland-laws</code> を設定すると自動でここに反映されます。</p>
         </article>
     </main>
 
