--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <li><a href="#home">Home ホーム</a></li>
                     <li><a href="#philosophy">Philosophy 理念</a></li>
                     <li><a href="#states">States 州</a></li>
+                    <li><a href="/laws/index.html">Laws 法律</a></li>
                 </ul>
             </div>
         </nav>
@@ -193,6 +194,7 @@
                         <li><a href="https://github.com/Piltaland-neko09cat">GitHub Organization</a></li>
                         <li><a href="#philosophy">Law as Code</a></li>
                         <li><a href="#states">16 States</a></li>
+                        <li><a href="/laws/index.html">Laws</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
